# partial-cli-beta

./: .gitignore  README.md  pyproject.toml
partial_cli/: __init__.py  clawback.py  config.py  create.py  get.py  show.py  take.py
partial_cli/puzzles/: __init__.py  clawback.py  create.py  fee.clsp  fns-5.clsp  fns-6.clsp  fns-cat-to-xch.clsp  fns.clsp  partial-5.clsp  partial-6.clsp  partial-cat-to-xch.clsp  partial.clsp  partial.py  rate-5.clsp  rate.clsp  standard_partial_clawback.clsp  take.py
partial_cli/show/: __init__.py
partial_cli/types/: partial_info.py
partial_cli/utils/: partial.py  rpc.py  shared.py
tests/3b773ac40d9fd8c734e4ec5891f56e784a38c106d6b90f9c1f0a5f055f217d20/: README.md  clawback.json  launcher-taker.offer  launcher.offer
tests/puzzles/: clawback.py  fee.py  rate.py
tests/testnet11/BYC04-x-TDBX-d10000374ef/: 1.offer  launcher.offer  sb-clawback-1.json  sb-take-launcher.json  take-launcher.offer
tests/testnet11/TDBX-x-XCH-2f5249/: 1.offer  launcher.offer  sb-clawback-1.json  sb-take-launcher.json  take-launcher.offer
tests/testnet11/XCH-x-TDBX-b457e29/: 1.offer  launcher.offer  sb-take-launcher.json  take-launcher.offer
tests/testnet11/create-clawback/: README.md  clawback.json  launcher.offer
tests/testnet11/create-take/: README.md  launcher-spend.json  launcher.offer
tests/testnet11/create-take-clawback/: 001.offer  launcher-spend.json
tests/testnet11/create-take-take/: 001-spend.json  001.offer  README.md  launcher-spend.json  launcher.offer
