[tool.poetry]
name = "partial-cli"
version = "0.1.0"
description = "Placeholder for dexie partial cli"
authors = ["Dexie Contributors <pypi@dexie.space>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.8.10"
rich-click = "^1.8.3"
asyncio = "^3.4.3"


[tool.poetry.group.chia.dependencies]
chia-blockchain = "^2.4.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
partial = "partial_cli:partial_cmd"